...
    "serverError": "Sunucu hatası oluştu. Lütfen daha sonra tekrar deneyin.",
    "unknownError": "Bilinmeyen bir hata oluştu",
    "httpStatus": "HTTP Durumu: {{status}}"
  },
  "assetAccess": {
    "wallet": "Cüzdan",
    "inventory": "Envanter"
  },
  "tabs": {
    "trusting": "Güvenilen",
    "forYou": "Senin İçin",
    "tips": "İpuçları",
    "questions": "Sorular",
...
      "experience": "Genel",
      "update": "Güncelleme",
      "question": "Soru",
      "tipsAndTricks": "İpuçları ve Püf Noktaları"
    },
    "interestOptions": {
      "truster": "Truster",
      "categoryMatch": "Kategori Eşleşmesi",
      "trending": "Trend",
      "newUser": "Yeni Kullanıcı",
      "boosted": "Öne Çıkan",
      "inventoryMatch": "Envanter Eşleşmesi",
      "productGroupMatch": "Ürün Grubu Eşleşmesi"
...
