{
  "screens": {
    "marketplace": {
      "title": "Market",
      "tabs": {
        "allNFTs": "Tüm NFT'ler",
        "myListings": "İlanlarım"
      },
      "errors": {
        "loadingError": "NFT'ler yüklenirken bir hata oluştu: {{message}}",
        "loadingMyListingsError": "İlanlarınız yüklenirken bir hata oluştu: {{message}}"
      },
...
